<resources>
    <string name="app_name">Exercicio03</string>

    <string name="texto">Texto:</string>
    <string name="tamanhoLetra">Tamanho da Letra</string>
    <string name="estilo">Estilos</string>
    <string name="negrito">Negrito</string>
    <string name="italico">Itálico</string>
    <string name="maiusculo">MAIUSCULO</string>
    <string name="corLetra">Cores da Letra</string>
    <string name="roxo">Roxo</string>
    <string name="laranja">Laranja</string>
    <string name="ciano">Ciano</string>
</resources>